--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -8,3 +8,10 @@
     color: white;
     padding-left: 30px;
 }
+
+@media screen and (max-width: '650px') {
+    .navbar {
+        display: flex;
+        flex-direction: column;
+    }
+}
