--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,22 @@ body {
 }
 
 .btn {
-  background: var(--dark);
+  border-radius: 50px;
+  background: rgb(36, 221, 235);
   color: var(--light);
-  padding: 0.6rem 1.3rem;
+  padding: 1rem 4.5rem;
   text-decoration: none;
+  font-size: 30px;
+  text-align: center;
   border: 0;
+}
+
+@media screen and (max-width: '650px') {
+  .btn {
+    padding: 0.6rem 2.5rem!important;
+    font-size: 15px;
+    text-align: baseline;
+  }
 }
 
 img {
