--- a/src/App.css
+++ b/src/App.css
@@ -20,21 +20,19 @@ body {
   border-radius: 50px;
   background: rgb(36, 221, 235);
   color: var(--light);
-  padding: 1rem 4.5rem;
+  width: 50%;
+  height: 3rem;
   text-decoration: none;
-  font-size: 30px;
-  text-align: center;
+  font-size: 20px;
   border: 0;
-}
-
-@media screen and (max-width: '650px') {
-  .btn {
-    padding: 0.6rem 2.5rem!important;
-    font-size: 15px;
-    text-align: baseline;
-  }
+  display: grid;
+  place-content: center;
 }
 
 img {
   max-width: 100%;
+}
+
+a {
+  text-decoration: none;
 }
