productive component complete

--- a/src/components/accessible/Accessible.scss
+++ b/src/components/accessible/Accessible.scss
@@ -26,3 +26,19 @@
     display: grid;
     place-items: center;
 }
+
+@media screen and (max-width: '650px') {
+    .comment-header {
+        font-size: 28px;
+        font-weight: 900;
+        text-align: center;
+        padding: 10px 0;
+    }
+    
+    .comment-p {
+        line-height: 1.6rem;
+        text-align: center;
+        font-size: 16px;
+        padding-bottom: 30px;
+    }
+}
