--- a/src/components/about-profile/AboutProfile.scss
+++ b/src/components/about-profile/AboutProfile.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     color: white;
+    padding-bottom: 200px;
 
 }
 
@@ -20,7 +21,7 @@
     margin-left: 22px;
     text-align: center;
     padding: 20px;
-    width: 50%;
+    width: 40%;
     height: 12rem;
     box-shadow: 0px 1px 5px rgb(153, 169, 175);
 }
@@ -35,7 +36,7 @@
     padding-top: 10px;
 }
 
-@media screen and (max-width: '650px') {
+@media screen and (max-width: '768px') {
     .aboutprofile {
         display: flex;
         flex-direction: column;
