--- a/src/components/message/Message.scss
+++ b/src/components/message/Message.scss
@@ -1,14 +1,15 @@
 .message {
+    overflow: hidden;
     color: white;
     margin: auto;
-    width: 50%;
-    height: 15rem;
+    width: 80%;
+    height: 18rem;
     box-shadow: 0px 1px 5px rgb(153, 169, 175);
     background: #21293C;
 }
 
 .message-titles {
-    padding: 20px 0;
+    padding: 20px 50px;
     text-align: center;
 }
 
@@ -39,10 +40,43 @@
     margin-left: 15px;
     text-decoration: none;
     border-radius: 50px;
-    width: 30%;
+    width: 45%;
     height: 2rem;
     color: white;
-    padding-top: 5px;
+    padding-top: 8px;
     text-align: center;
     background: rgb(82, 222, 247);
+}
+
+@media screen and (max-width: '650px') {
+    .message {
+        width: 100%!important;
+        height: 20rem!important;
+    }
+
+    .btn-nn {
+        margin-top: 10px;
+        width: 100%;
+        height: 2rem;
+        padding-top: 11px;
+        font-size: 15px;
+    }
+
+    .message-button {
+        display: grid;
+        place-items: center;
+    }
+    
+    #message-comment {
+        font-size: 16px;
+        padding: 10px 20px;
+    }
+
+    #text {
+        border-radius: 50px;
+        width: 100%;
+        height: 2rem;
+        text-align: center;
+        font-size: 12px;
+    }
 }
