adding login page

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -78,7 +78,9 @@
         display: flex;
         justify-content: space-between;
         padding: 40px 0 0 0;
-    }.right {
+    }
+    
+    .right {
         text-align: center;
         padding-top: 40px;
     }
