--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --primary: #ddd;
   --dark: #333;
   --light: #fff;
@@ -35,4 +35,4 @@ img {
 
 a {
   text-decoration: none;
-}
+} */
